src/objects/Contract_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Introduction</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>LOW VOLTAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH VOLTAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONGENITAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISSUE VALVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICAL VALVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP DIAGNOSTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP THERAPEUTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE - DISPOSABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVX-ARRAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECORDING SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM - SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VANTAGE VIEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workmate Claris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewMate (TTE Probe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE - SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIGUIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCT CATHETERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRESSURE WIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VASCULAR PLUGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTIVE CLOSURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP ASSIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optis Integrated</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-manufactured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract_Line_Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Line Items</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Contract Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <recordTypes>
        <fullName>Capital</fullName>
        <active>true</active>
        <label>Capital</label>
    </recordTypes>
    <recordTypes>
        <fullName>Capital_Alternative_Program</fullName>
        <active>true</active>
        <label>Capital Alternative Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implants_Disposables</fullName>
        <active>true</active>
        <label>Implants &amp; Disposables</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>